--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ufnsbe",
   "version": "1.0.0",
-  "description": "",
+  "description": "Official website of the National Society of Black Engineers Gator Chapter",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +10,15 @@
     "start": "next start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Quinten Rivers",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
